--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -1,7 +1,6 @@
 .page-views {
 	list-style-type: none;
-  padding-top: 20px;
-	padding-left: 150px;
+	padding: 20px 0 40px 150px;
 
 	.li {
 		padding-bottom: 20px;
@@ -15,7 +14,24 @@
 }
 
 .sidebar {
+	padding-top: 110px;
 	padding-left: 10px;
 	border-left: 2px solid lightgray;
 	border-width: thin;
+}
+
+.front-staff-view-body {
+	padding-left: 90px;
+	width: 400px;
+	p {
+		font-size: 16px;
+	}
+	
+	.project-stats {
+		position-bottom: relative;
+		
+		span {
+			font-weight: normal;
+		}
+	}
 }
