--- a/app/assets/templates/projects/form.jst.ejs
+++ b/app/assets/templates/projects/form.jst.ejs
@@ -1,8 +1,10 @@
-<% for (var key in gon.categories) { %>
-	<% if (gon.categories.hasOwnProperty(key)) { %>
-		<% PunchStarter.categories.getOrFetch(key); %>
-	<% } %>
-<% } %>
+<% 
+	for (var key in gon.categories) { 
+	 if (gon.categories.hasOwnProperty(key)) { 
+		 PunchStarter.categories.getOrFetch(key); 
+	 }
+	} 
+%>
 
 <div class="grey-field">
 	<h1>Meet your new project.</h1>
@@ -28,7 +30,8 @@
 							    name="comment[image_url]"
 							    data-fp-mimetype="image/*"
 									class="btn btn-primary project-image" >
-							</div><p> If successfully uploaded, it should say in the preview box to the right!</p>
+								<p> If successfully uploaded, it should say in the preview box to the right!</p>
+							</div>
 						</div>
 					</li>
 					
