--- a/app/assets/templates/discover/discover.jst.ejs
+++ b/app/assets/templates/discover/discover.jst.ejs
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="assets/helpers/discover_helper.js"></script>
+
 <div class="row">
 	<div class="col-xs-1"></div>
 		<div class="container">
