--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -1,5 +1,5 @@
 $kickstarter-green: #76CE1E;
-$primary-background-color: #EEF2EA;
+$primary-color: #EEF2EA;
 
 .important { 
 	font-size: 54px;
@@ -9,7 +9,7 @@ $primary-background-color: #EEF2EA;
 .project-info {
 	width: 100%;
 	height: 100%;
-	background-color: $primary-background-color;
+	background-color: $primary-color;
 	padding-bottom: 500px;
 }
 
