--- a/app/assets/templates/home_page/staff_picks.jst.ejs
+++ b/app/assets/templates/home_page/staff_picks.jst.ejs
@@ -1,6 +1,6 @@
 <div class="row">
  <div class="col-xs-9 page-body">
- 	 <h3>Staff Picks: <p class="staff-change"> </p></h3>
+ 	 <h2><strong><u>Staff Picks:</u></strong><p class="staff-change"> </p></h2>
  	 <div class="staff-pick-project"></div>
  </div>
  
