Finish Popular View, convert form list to miniViews in discover page.

--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -44,10 +44,10 @@ $primary-color: #EEF2EA;
 	.mini-project-view {
 		height: 450px;
 		width: 250px;
-		margin: 0px 5px;
+		margin: 5px 5px;
 		border-radius: 10px;
 		border: solid 5px lightgray;
-		background-color: $primary-color;
+		background-color: white;
 		padding: 20px;
 	}
 }
