--- a/app/assets/templates/discover/discover.jst.ejs
+++ b/app/assets/templates/discover/discover.jst.ejs
@@ -1,5 +1,3 @@
-<script type="text/javascript" src="assets/helpers/discover_helper.js"></script>
-
 <div class="row">
 	<div class="col-xs-1"></div>
 		<div class="container">
@@ -28,3 +26,5 @@
 	
 	</div>
 </div>
+
+<ol class="page-views container"></ol>
