setting up for heroku

--- a/app/views/layouts/_new.html.erb
+++ b/app/views/layouts/_new.html.erb
@@ -6,14 +6,17 @@
 			<%= input_auth_token %>
 			
 			<label for="email">EMAIL</label><br>
-			<input type="email" name="user[email]"><br>
+			<input type="email" name="user[email]" id="log-in-email"><br>
 	
 			<label for="password">Password</label><br>
-			<input type="password" name="user[password]"><br><br>
+			<input type="password" name="user[password]" id="log-in-pw"><br><br>
 
 			<input type="checkbox"> Remember me<br><br>
 	
 			<input type="submit" value="Log me in!" class="log-in-btn btn btn-success">
+			
+			<br><br><br><p>Or, sign in as a Guest!</p>
+			<input type="submit" class="btn demo-button" value="Demo ">
 		</form>
 	</div>
 
