--- a/app/views/layouts/_new.html.erb
+++ b/app/views/layouts/_new.html.erb
@@ -14,9 +14,6 @@
 			<input type="checkbox"> Remember me<br><br>
 	
 			<input type="submit" value="Log me in!" class="log-in-btn btn btn-success">
-			
-			<br><br><br><p>Or, sign in as a Guest!</p>
-			<input type="submit" class="btn demo-button" value="Demo ">
 		</form>
 	</div>
 
@@ -58,6 +55,9 @@
 		<p>It's fast and easy.</p>
 		<button class="btn btn-primary">Place Holder</button><br><br>
 		<p class="field-note">We'll never post anything without your permission</p>
+		
+		<br><br><br><p>Or, sign in as a Guest!</p>
+			<button class="btn demo-btn"><p>Demo User</p></button>
 	</div>
 </div>
 
