Fix carousel to start upon load

--- a/app/assets/templates/home_page/home_page.jst.ejs
+++ b/app/assets/templates/home_page/home_page.jst.ejs
@@ -1,2 +1,10 @@
 <ol class="page-views">	
 </ol>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    $('.carousel').carousel({
+      interval: 3000
+    })
+  });
+</script>
