Add apology link for empty links

--- a/app/assets/templates/projects/form.jst.ejs
+++ b/app/assets/templates/projects/form.jst.ejs
@@ -99,7 +99,7 @@
 									type="radio" 
 									name="project[fundingDuration]" 
 									value="Number of days"s> --> Number of Days<input type="text" name="project[fundingDuration]" class="form-control new-project-duration" placeholder="1-60 days, we recommend 30 or less">
-									<p class="field-note">We recommend that projects last 30 days or less. Shorter durations have higher success rates, and will create a helpful sense of urgency around your project. For more on duration, see <a href="#">Kickstarter School</a>.</p>
+									<p class="field-note">We recommend that projects last 30 days or less. Shorter durations have higher success rates, and will create a helpful sense of urgency around your project. For more on duration, see <a href="/#/oops">Kickstarter School</a>.</p>
 
 <p class="field-note">Note: After your project ends, there is a 14-day window for collecting and processing pledges. After that, you can transfer funds from your Amazon account to your bank account. Please plan accordingly.</p>
 							</div>
@@ -115,7 +115,7 @@
 								<input type="text" name="project[fundingGoal]" value="<%= project.fundingGoal %>" class="form-control new-project-goal" placeholder="$0 USD">
 								<p class="field-note">Your funding goal should be the minimum amount needed to complete the project and fulfill all rewards. Because funding is all-or-nothing, you can always raise more than your goal but never less.</p>
 
-<p class="field-note">If your project is successfully funded, Kickstarter will apply a 5% fee to the funds raised, and Amazon will apply <a href="#">credit card processing fees</a> (between 3-5	%). If funding isn't successful, there are no fees.</p>
+<p class="field-note">If your project is successfully funded, Kickstarter will apply a 5% fee to the funds raised, and Amazon will apply <a href="/#/oops">credit card processing fees</a> (between 3-5	%). If funding isn't successful, there are no fees.</p>
 							</div>
 						</div>
 					</li>
