--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,25 +2,25 @@
 	<div class="col-xs-3">
 		<p class="footer-list-title"><strong>About us<strong></p>
 		<ul class="footer-list">
-			<li><a href="#">2013 highlights</a></li>
-			<li><a href="#">2012 highlights</a></li>
-			<li><a href="#">Who we are</a></li>
-			<li><a href="#">Jobs</a></li>
-			<li><a href="#">Press</a></li>
-			<li><a href="#">Stats</a></li>
-			<li><a href="#">Projects we love</a></li>
+			<li><a href="/#/oops">2013 highlights</a></li>
+			<li><a href="/#/oops">2012 highlights</a></li>
+			<li><a href="/#/oops">Who we are</a></li>
+			<li><a href="/#/oops">Jobs</a></li>
+			<li><a href="/#/oops">Press</a></li>
+			<li><a href="/#/oops">Stats</a></li>
+			<li><a href="/#/oops">Projects we love</a></li>
 		</ul>
 	</div>
 	
 	<div class="col-xs-3">
 		<p class="footer-list-title"><strong>Help<strong></p>
 		<ul class="footer-list">
-			<li><a href="#">What is Punchstarter?</a></li>
-			<li><a href="#">FAQ</a></li>
-			<li><a href="#">Support</a></li>
-			<li><a href="#">Punchstarter School</a></li>
-			<li><a href="#">Terms of Use</a></li>
-			<li><a href="#">Privacy Policy</a></li>
+			<li><a href="/#/oops">What is Punchstarter?</a></li>
+			<li><a href="/#/oops">FAQ</a></li>
+			<li><a href="/#/oops">Support</a></li>
+			<li><a href="/#/oops">Punchstarter School</a></li>
+			<li><a href="/#/oops">Terms of Use</a></li>
+			<li><a href="/#/oops">Privacy Policy</a></li>
 		</ul>
 	</div>
 	
@@ -36,12 +36,12 @@
 	<div class="col-xs-2">
 		<p class="footer-list-title"><strong>Hello<strong></p>
 		<ul class="footer-list">
-			<li><a href="#">Twitter</a></li>
-			<li><a href="#">Facebook</a></li>
-			<li><a href="#">Tumblr</a></li>
-			<li><a href="#">Instagram</a></li>
-			<li><a href="#">Vine</a></li>
-			<li><a href="#">Blog</a></li>
+			<li><a href="/#/oops">Twitter</a></li>
+			<li><a href="https://www.facebook.com/malcolm.ahoy">Facebook</a></li>
+			<li><a href="http://ahoym.tumblr.com/">Tumblr</a></li>
+			<li><a href="/#/oops">Instagram</a></li>
+			<li><a href="/#/oops">Vine</a></li>
+			<li><a href="/#/oops">Blog</a></li>
 		</ul>
 	</div>
 </div>
