--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -27,16 +27,16 @@
 							<div class="col-xs-3">
 								<p class="my-stuff-links"><strong>My Stuff</strong></p>
 									<ul class="my-stuff-links">
-										<li><a href="#">Messages</a></li>
-										<li><a href="#">Activity</a></li>
-										<li><a href="#">Starred projects</a></li>
+										<li><a href="/#/oops" class="empty-link">Messages</a></li>
+										<li><a href="/#/oops" class="empty-link">Activity</a></li>
+										<li><a href="/#/oops" class="empty-link">Starred projects</a></li>
 									</ul><br>
 								<p class="account-links"><strong>Account</strong></p>
 									<ul class="account-links">
 										<li><a href="<%= user_url(current_user)%>">Profile</a></li>
-										<li><a href="#">Backer history</a></li>
-										<li><a href="#">Settings</a></li>
-										<li><a href="#">Find friends</a></li>
+										<li><a href="/#/oops" class="empty-link">Backer history</a></li>
+										<li><a href="/#/oops" class="empty-link">Settings</a></li>
+										<li><a href="/#/oops" class="empty-link">Find friends</a></li>
 									</ul><br>
 							</div>
 							<% if logged_in? %>
