--- a/app/views/layouts/_new.html.erb
+++ b/app/views/layouts/_new.html.erb
@@ -42,8 +42,8 @@
 			<input type="checkbox"> <strong>Discover new projects</strong>
 			<p class="field-note">with our weekly newsletter</p><br>
 	
-			<p class="field-note">By signing up, you agree to our <a href="#">terms of use</a>
-				and <a href="#">privacy policy</a>
+			<p class="field-note">By signing up, you agree to our <a href="/#/oops">terms of use</a>
+				and <a href="/#/oops">privacy policy</a>
 	
 				<br><br>
 			<input type="submit" value="Sign me up!" class="sign-up-btn btn btn-success">
