modify discover page site

--- a/app/assets/templates/discover/discover.jst.ejs
+++ b/app/assets/templates/discover/discover.jst.ejs
@@ -7,7 +7,9 @@
 			</div>
 	<div class="col-xs-9">
 		<div class="discover-body">
-			<div class="discover-categories-body"></div>
+			<div class="discover-categories-body">
+				<h4>Click on a Category on the right to see posted projects!</h4>
+			</div>
 		</div>
 	</div>
 	
