Fix like button, pages now scroll to top on re-render

--- a/app/assets/templates/projects/show.jst.ejs
+++ b/app/assets/templates/projects/show.jst.ejs
@@ -26,7 +26,7 @@
      </div>
 			
 		<div class="project-view-side col-xs-4">
-			<button class="btn favorites"><img src="assets/starMe.png" height="40" width="40"> Like this Project!</button>
+			<button class="btn favorites"><img src="assets/star.png" height="40" width="40"> Like this Project!</button>
 			
 			<h1 class="important"><%= project.numBackers() %></h1>
 			<h4>backers</h4>
@@ -57,3 +57,7 @@
 		</div>		
 	</div>	
 </div>
+
+<script>
+	$('body').scrollTop(0);
+</script>
