--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -28,7 +28,7 @@
 		<p class="footer-list-title"><strong>Discover<strong></p>
 		<ul class="footer-list category-double">
 			<% Project::CATEGORIES.values.each do |category| %>
-			<li><a href="#"><%= category %></a></li>
+			<li><a href="/#/discover"><%= category %></a></li>
 			<% end %>
 		</ul>
 	</div>
