Footer fades in after content, add links to carousel, new HD picture for SlideTwo.

--- a/app/assets/templates/home_page/carousel.jst.ejs
+++ b/app/assets/templates/home_page/carousel.jst.ejs
@@ -11,7 +11,7 @@
         <div class="carousel-caption">
           <h1>91,585 people made this happen.</h1>
           <p>Veronica Mars. Now on iTunes.</p>
-          <p><a class="btn btn-lg btn-success" href="#" role="button">Watch Now</a></p>
+          <p><a class="btn btn-lg btn-success" href="https://itunes.apple.com/us/genre/movies/id33" role="button">Watch Now</a></p>
         </div>
       </div>
     </div>
@@ -28,7 +28,7 @@
         <div class="carousel-caption">
           <h1>Hundreds of films and counting.</h1>
           <p>An Oversimplification of Her Beauty. Now on iTunes.</p>
-          <p><a class="btn btn-lg btn-success" href="#" role="button">Watch Now</a></p>
+          <p><a class="btn btn-lg btn-success" href="https://itunes.apple.com/us/genre/movies/id33" role="button">Watch Now</a></p>
         </div>
       </div>
     </div>
