--- a/app/assets/templates/home_page/home_page.jst.ejs
+++ b/app/assets/templates/home_page/home_page.jst.ejs
@@ -4,7 +4,11 @@
 <script type="text/javascript">
   $(document).ready(function() {
     $('.carousel').carousel({
-      interval: 3000
-    })
+      interval: 5000
+    });
+		
+		$('.home-page').ready(function () {
+			$('#footer').fadeIn()
+		});
   });
 </script>
