Clean up unnecessary files, minor styling preferences

--- a/app/assets/templates/home_page/successfully_funded.jst.ejs
+++ b/app/assets/templates/home_page/successfully_funded.jst.ejs
@@ -1,4 +1,4 @@
-<h2><strong><u>Successfully Funded</u></strong></h2>
+<h2><strong>Successfully Funded</strong></h2>
 <div class="mini-views-field row">
 	
 </div>
