--- a/app/assets/templates/home_page/most_popular.jst.ejs
+++ b/app/assets/templates/home_page/most_popular.jst.ejs
@@ -1,4 +1,4 @@
-<h2><strong><u>Most Popular</u></strong></h2>
+<h2><strong>Most Popular</strong></h2>
 <div class="mini-views-field row">
 	
 </div>
