--- a/app/assets/templates/projects/mini.jst.ejs
+++ b/app/assets/templates/projects/mini.jst.ejs
@@ -1,11 +1,10 @@
 <img src="<%= project.escape('filepicker_url') %>" height="175" width="200">
 
-<h4><strong><a href="/#/projects/<%= project.id %>/<%= project.collection.category.escape('name') %>">
+<h4><strong><a href="/#/projects/<%= project.id %>/<%= project._category %>">
 	<%= project.escape("title") %>
 </a></strong></h4>
 
-
-<p class="field-note">by <%= project.creator() %></p>
+<p class="field-note">by <%= project.creator().escape('name') %></p>
 <p class="field-note"><%= project.escape("short_blurb") %></p>
 <p class="field-note"><%= project.escape("project_location") %></p>
 
