Project show page correctly shows creator name. Add icons for sub sections.

--- a/app/assets/templates/home_page/location_projects.jst.ejs
+++ b/app/assets/templates/home_page/location_projects.jst.ejs
@@ -1,4 +1,4 @@
-<h2><strong><%= location %></strong></h2>
+<h3><strong><i class="fa fa-globe fa-lg greenify"></i>  <%= location %></strong></h3>
 <div class="mini-views-field row">
 	
 </div>
