--- a/app/assets/templates/home_page/most_popular.jst.ejs
+++ b/app/assets/templates/home_page/most_popular.jst.ejs
@@ -1,4 +1,4 @@
-<h2><strong>Most Popular</strong></h2>
+<h3><strong><i class="fa fa-smile-o fa-lg greenify"></i> Most Popular</strong></h3>
 <div class="mini-views-field row">
 	
 </div>
