--- a/app/assets/templates/home_page/staff_picks.jst.ejs
+++ b/app/assets/templates/home_page/staff_picks.jst.ejs
@@ -1,6 +1,6 @@
 <div class="row">
  <div class="col-xs-9 page-body">
- 	 <h2><strong>Staff Picks:</strong><p class="staff-change"> </p></h2>
+ 	 <h3><strong>Staff Picks:</strong><span class="staff-change greenify"> </span></h3>
  	 <div class="staff-pick-project"></div>
  </div>
  
