--- a/app/assets/templates/home_page/successfully_defunded.jst.ejs
+++ b/app/assets/templates/home_page/successfully_defunded.jst.ejs
@@ -1,4 +1,4 @@
-<h2><strong>Successfully Defunded</strong></h2>
+<h3><strong><i class="fa fa-thumbs-down fa-lg greenify"></i> Successfully Defunded</strong></h3>
 <div class="mini-views-field row">
 	
 </div>
