--- a/app/assets/templates/home_page/successfully_funded.jst.ejs
+++ b/app/assets/templates/home_page/successfully_funded.jst.ejs
@@ -1,4 +1,4 @@
-<h2><strong>Successfully Funded</strong></h2>
+<h3><strong><i class="fa fa-money fa-lg greenify"></i> Successfully Funded</strong></h3>
 <div class="mini-views-field row">
 	
 </div>
