--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <title>PunchStarter</title>
 	<%= include_gon %>
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"></link>
 	<%= stylesheet_link_tag "application", :media => "all" %>
   <script src="http://api.filepicker.io/v1/filepicker.js"></script>
   <script>filepicker.setKey(gon.filepicker_api);</script>
