--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -48,7 +48,7 @@ $primary-color: #EEF2EA;
 	padding: 10px 0;
 	
 	.mini-project-view {
-		height: 470px;
+		height: 490px;
 		width: 250px;
 		margin: 5px 5px;
 		border-radius: 10px;
@@ -56,4 +56,10 @@ $primary-color: #EEF2EA;
 		background-color: white;
 		padding: 20px;
 	}
+}
+
+.staff-change {
+	padding-left: 10px;
+	font-weight: bold;
+	font-style: italic;
 }
