--- a/app/assets/templates/home_page/most_recent.jst.ejs
+++ b/app/assets/templates/home_page/most_recent.jst.ejs
@@ -1,4 +1,4 @@
-<h2><strong>Most Recent</strong></h2>
+<h3><strong><i class="fa fa-clock-o fa-lg greenify"></i> Most Recent</strong></h3>
 <div class="mini-views-field row">
 	
 </div>
