Add error messages when required fields are not filled in

--- a/app/assets/templates/projects/form.jst.ejs
+++ b/app/assets/templates/projects/form.jst.ejs
@@ -10,12 +10,13 @@
 	<h1>Meet your new project.</h1>
 	<p>Start by giving it a name, a pic, and other important details.</p>
 </div>
+<div class="alert"></div>
 
 <div class="row">
 	<div class="col-xs-2"></div>
 		
 	<div class="col-xs-6">
-		<form>
+		<form id="newProj">
 			<div class="form-group">
 				<ol class="project-fields row">
 					
@@ -27,7 +28,7 @@
 							<div class="project-input">
 								<input
 							    type="filepicker"
-							    name="comment[image_url]"
+							    name="project[image_url]"
 							    data-fp-mimetype="image/*"
 									class="btn btn-primary project-image" >
 							</div>
