Clicking pictures of mini-views now directs to that project page.

--- a/app/assets/templates/projects/mini.jst.ejs
+++ b/app/assets/templates/projects/mini.jst.ejs
@@ -1,4 +1,4 @@
-<img src="<%= project.escape('filepicker_url') %>" height="175" width="200">
+<a href="/#/projects/<%= project.id %>/<%= project._category %>"><img src="<%= project.escape('filepicker_url') %>" height="175" width="200"></a>
 
 <h5><strong><a href="/#/projects/<%= project.id %>/<%= project._category %>">
 	<%= project.escape("title") %>
