--- a/app/assets/templates/projects/front_staff_view.jst.ejs
+++ b/app/assets/templates/projects/front_staff_view.jst.ejs
@@ -1,5 +1,5 @@
 <div class="mid-picture col-xs-5">
-	<img src="<%= project.escape('filepicker_url') %>" height="300" width="400">
+	<img src="<%= project.escape('filepicker_url') %>">
 </div>
 
 <div class="front-staff-view-body col-xs-4">
