--- a/app/assets/stylesheets/home_page.css.scss
+++ b/app/assets/stylesheets/home_page.css.scss
@@ -15,30 +15,45 @@ $primary-color: #EEF2EA;
 	}
 }
 
-.sidenav li a{
-	display:inline;
-	padding-left: -15px;
-}
-
-.sidebar {
-	padding-top: 60px;
-	padding-left: 10px;
-	border-left: 2px solid lightgray;
-	border-width: thin;
-}
-
-.front-staff-view-body {
-	padding-left: 90px;
-	width: 400px;
-	p {
-		font-size: 16px;
+.staff-picks {
+	.staff-change {
+		padding-left: 10px;
+		font-weight: bold;
+		font-style: italic;
 	}
 	
-	.project-stats {
-		position-bottom: relative;
+	.mid-picture img {
+		max-width: 100%;
+		height: 300px;
+	}
+	
+	.front-staff-view-body {
+		float: left;
+		padding-left: 90px;
+		width: 400px;
 		
-		span {
-			font-weight: normal;
+		p {
+			font-size: 16px;
+		}
+	
+		.project-stats {
+			position-bottom: relative;
+		
+			span {
+				font-weight: normal;
+			}
+		}
+	}
+	
+	.sidebar {
+		padding-top: 60px;
+		padding-left: 10px;
+		border-left: 2px solid lightgray;
+		border-width: thin;
+
+		.sidenav li a{
+			display:inline;
+			padding-left: -15px;
 		}
 	}
 }
@@ -67,10 +82,4 @@ $primary-color: #EEF2EA;
 	  position:relative;
 	  z-index:5;
 	}
-}
-
-.staff-change {
-	padding-left: 10px;
-	font-weight: bold;
-	font-style: italic;
 }
