--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,13 @@
   <title>PunchStarter</title>
 	<%= include_gon %>
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"></link>
+	<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet"></link>
 	<%= stylesheet_link_tag "application", :media => "all" %>
   <script src="http://api.filepicker.io/v1/filepicker.js"></script>
   <script>filepicker.setKey(gon.filepicker_api);</script>
   <%= javascript_include_tag "application" %>
+	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>	
   <%= csrf_meta_tags %>
 </head>
 <body>
