--- a/app/assets/templates/projects/mini.jst.ejs
+++ b/app/assets/templates/projects/mini.jst.ejs
@@ -1,4 +1,4 @@
-<a href="/#/projects/<%= project.id %>/<%= project._category %>"><img src="<%= project.escape('filepicker_url') %>" height="175" width="200"></a>
+<a href="/#/projects/<%= project.id %>/<%= project._category %>"><img class="lazy" data-original="<%= project.escape('filepicker_url') %>" height="175" width="200"></a>
 
 <h5><strong><a href="/#/projects/<%= project.id %>/<%= project._category %>">
 	<%= project.escape("title") %>
