Clean up front-end code a bit. Deleted unused files, added some comments for clarification.

--- a/app/assets/templates/home_page/nothing_here.jst.ejs
+++ b/app/assets/templates/home_page/nothing_here.jst.ejs
@@ -1,6 +1,6 @@
 <h1>Oops! There's nothing here!</h1>
 <p>It's not you, it's me. You probably visited an empty link!</p>
-<p>Have a picture of a puppy! There's a back button at the bottom of the page.</p>
+<p>Have a picture of some puppies! There's a back button at the bottom of the page.</p>
 <img src="assets/puppies.jpeg" width="1000" height="800"><br><br>
 
 <a href="#" class="btn btn-primary empty-link">Back</a><br><br>
